examples/inProgress/C/tests/shouldFail/twoGlobals.c
int x = 5;
int x = 7;
int main(void){
	return 0;
}
